# otus-cpp-professional-hw08-boost

./: CMakeLists.txt  README.md  TASK.md
.github/workflows/: release.yml
docker/: Dockerfile
doxygen/: Doxyfile  groups.dox  mainpage.dox  namespaces.dox
src/: app_config.h  cmd_line_parser.cpp  cmd_line_parser.h  duplicate_finder.cpp  duplicate_finder.h  file_info.h  file_scanner.cpp  file_scanner.h  file_signature.cpp  file_signature.h  hash_algorithm.h  hasher.cpp  hasher.h  main.cpp  name_matcher.cpp  name_matcher.h  output_formatter.cpp  output_formatter.h
tests/: CMakeLists.txt
tests/unit/: cmd_line_parser_test.cpp  duplicate_finder_test.cpp  file_scanner_test.cpp  file_signature_test.cpp  hasher_test.cpp  name_matcher_test.cpp  output_formatter_test.cpp  self_check.sh
